Fixed overflow issue

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -73,7 +73,7 @@
 }
 
 html {
-  width: 100vw;
+  width: 100%;
   scroll-behavior: smooth;
 }
 body {
@@ -459,13 +459,15 @@ body {
       }
     }
     #contact-container {
+      max-width: 100vw;
+      // overflow: hidden;
       > .btns {
         min-height: 60%;
         width: 100%;
-        height: 50vh;
+        min-height: 50vh;
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         align-items: center;
         justify-content: center;
         gap: 5rem;
@@ -554,9 +556,11 @@ body {
     gap: 1.5rem;
     > div {
       > p {
+        text-align: center;
         margin: 0.25rem;
       }
       a {
+        text-align: center;
         text-decoration: underline white;
       }
     }
@@ -686,6 +690,12 @@ body {
     }
     footer {
       grid-template-columns: 1fr;
+      > div {
+        a,
+        p {
+          text-align: left;
+        }
+      }
     }
   }
 }
